<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<EditText 
	    android:id="@+id/txtSoort"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:hint="@string/soort"
	    android:layout_row="0"
	    android:layout_column="0"
	     />
	<EditText 
	    android:id="@id/txtUren"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:hint="@string/uurformaat"
	    android:layout_row="0"
	    android:layout_column="1" />
	
	<Button
	    android:id="@+id/btnToevoegenSoort"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:hint="@string/toevoegen"
	    android:text="@string/knopToevoegen"
	    android:layout_row = "1"
	    android:layout_column="0"
	    android:layout_columnSpan="2" />
	
</GridLayout>
